add baidu tongji and backToTop

--- a/index.html
+++ b/index.html
@@ -30,8 +30,21 @@
         <img data-src="./images/19.jpg" alt="image19">
         <img data-src="./images/20.jpg" alt="image20">
     </div>
+    <a href="https://github.com/Leo555/lazyload" target="_blank" class="github-ribbon">
+        <img src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub">
+    </a>
+    <button onclick="backToTop()" title="Go to top">Top</button>
     <script>
     window.onload = checkImgs2
+    </script>
+    <script>
+    var _hmt = _hmt || [];
+    (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?0391cafd2247c0b68b9de35abf29c6d1";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+    })();
     </script>
 </body>
 
