--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 
 <body>
+    <header>
+        <h1>Lazyload</h1>
+        <h2>Open Network, and scroll your brower.</h2>
+    </header>
     <div id="root">
         <img data-src="./images/1.jpg" alt="image1">
         <img data-src="./images/2.jpg" alt="image2">
