use another method

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
     </a>
     <button onclick="backToTop()" title="Go to top">Top</button>
     <script>
-    window.onload = checkImgs2
+    // window.onload = checkImgs2
+    window.onload = window.onscroll = checkImgs
     </script>
     <script>
     var _hmt = _hmt || [];
