增加浏览器兼容性

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
     <title>Lazy image</title>
     <link rel="stylesheet" href="./style.css">
     <script src="./index.js"></script>
@@ -39,8 +40,7 @@
     </a>
     <button onclick="backToTop()" title="Go to top">Top</button>
     <script>
-    window.onload = checkImgs2
-    // window.onload = window.onscroll = checkImgs
+    window.onload = checkImgs
     </script>
     <script>
     var _hmt = _hmt || [];
