--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Lazy image</title>
     <link rel="stylesheet" href="./style.css">
+     <link rel="icon" href="favicon.ico" />
     <script src="./index.js"></script>
 </head>
 
